# feedback-vertex-set

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  hpo_env.yml  papers.txt  run-benchmark.sh  run.sh
.github/workflows/: build.yml  ci-windows.yml  ci.yml  clang-format.yml  container.yml  linux.yml  test.yml
benchmark/: solvers.cpp
benchmark/solvers/: CMakeLists.txt  naive.cpp  reduce.cpp
fvs/discrete/: discrete.hpp  graph.hpp  subgraph.hpp  undirected_graph.hpp  vc_funnel_handler.hpp  vertex_marker.hpp
fvs/discrete/algorithm/: acyclic.hpp  cc.hpp  connected.hpp  dfs.hpp  diclique.hpp  extract_undirected.hpp  fvs.hpp  neighborhood.hpp  reduction.hpp  reduction_vc.hpp  scc.hpp  two_cycles.hpp  vc.hpp
fvs/discrete/algorithm/heuristics/: greedy_reduction.hpp
fvs/discrete/algorithm/reduction/: core.hpp  double.hpp  edge.hpp  in.hpp  node.hpp  out.hpp  pie.hpp  util.hpp
fvs/discrete/algorithm/reduction_vc/: domination.hpp  folding.hpp  funnel.hpp  simplicial.hpp
fvs/discrete/util/: buffer.hpp  types.hpp
fvs/fvs_solver/: conshdlr_cycles.hpp  cycle_separation.hpp  feedback.hpp  fvs_solver.hpp
fvs/solvers/: fvs.hpp  greedy_reduction.hpp  naive.hpp  reduce_deg_1.hpp  reduce_deg_1_scc.cpp  vc.hpp  vc_reduce.hpp
fvs/solvers/detail/: cycle_separation.hpp  fvs.hpp  util.hpp  vc.hpp  vc_solver.hpp
fvs/vc_solver/: vc_solver.hpp  vertexcover.hpp
solvers/: greedy_reduction.cpp  greedy_reduction.hpp  naive.cpp  naive.hpp  reduce.cpp  reduce.hpp  reduce_deg_1.cpp  reduce_deg_1.hpp  reduce_deg_1_scc.cpp  reduce_deg_1_scc.hpp  template.hpp  vc_reduce.cpp  vc_reduce.hpp  vertex_cover.cpp
src/discrete/: discrete.hpp  graph.hpp  subgraph.hpp  undirected_graph.hpp  vc_funnel_handler.hpp  vertex_marker.hpp
src/discrete/algorithm/: cc.hpp  connected.hpp  dfs.hpp  double.hpp  extract_undirected.hpp  fvs.hpp  neighborhood.hpp  scc.hpp
src/discrete/algorithm/heuristics/: greedy_reduction.hpp
src/discrete/algorithm/reduction/: double.hpp  edge.hpp  node.hpp  pie.hpp  util.hpp
src/discrete/algorithm/reduction_vc/: domination.hpp  folding.hpp  funnel.hpp
src/discrete/util/: buffer.hpp  types.hpp
src/fvs_solver/: conshdlr_cycles.hpp  cycle_separation.hpp  feedback.hpp  fvs_solver.hpp
src/solvers/: naive.cpp  reduce.cpp  reduce.hpp  reduce_deg_1.cpp  template.hpp  vc_reduce.cpp  vertex_cover.cpp
src/vc_solver/: vertexcover.hpp
test/: CMakeLists.txt
test/data/: debug2  debug_graph  e_001.sol  e_003.sol  e_005.sol  e_005_scc_1  e_007.sol  e_009.sol  e_011.sol  e_013.sol  e_015.sol  e_017.sol  e_019.sol  e_021.sol  e_023.sol  e_025.sol  e_027.sol  e_029.sol  e_031.sol  e_033.sol  e_035.sol  e_037.sol  e_039.sol  e_041.sol  e_043.sol  e_045.sol  e_047.sol  e_049.sol  e_051.sol  e_053.sol  e_055.sol  e_057.sol  e_059.sol  e_061.sol  e_063.sol  e_065.sol  e_067.sol  e_069.sol  e_071.sol  e_073.sol  (+18 more)
test/data/vc/: vc-exact_001.gr.sol  vc-exact_003.gr.sol  vc-exact_005.gr.sol  vc-exact_007.gr.sol  vc-exact_011.gr.sol
test/discrete/: acyclic.cpp  basic_graph_reductions.cpp  double.cpp  fvs.cpp  graph.cpp  greedy_reduction.cpp  is_undirected_graph.cpp  reduction.cpp  subgraph.cpp  undirected.cpp  undirected_graph.cpp
test/discrete/algorithm/: cc.cpp  connected.cpp  dfs.cpp  diclique.cpp  domination.cpp  neighborhood.cpp  scc.cpp  two_cycles.cpp
test/discrete/algorithm/reduction/: core.cpp  edge.cpp  in.cpp  node.cpp  out.cpp  pie.cpp
test/discrete/algorithm/reduction_vc/: folding.cpp  funnel.cpp  simplicial.cpp
test/solvers/: naive.cpp  reduce.cpp  solver_greedy_reduction.cpp  solver_tests.hpp  vc_naive.cpp  vc_reduce.cpp  vc_solver_tests.hpp
tools/: CMakeLists.txt
tools/analysis/: CMakeLists.txt  graph-properties.cpp  run.sh  script.py
tools/benchmark/: combine_data.py  plot.py  run.sh
tools/components/: CMakeLists.txt  main.cpp
tools/verifier/: CMakeLists.txt  main.cpp
